--- a/journal/hello-world/index.html
+++ b/journal/hello-world/index.html
@@ -61,7 +61,7 @@
     <p class="text-sm font-bold mt-10">Tags</p>
     <p>
       
-      <a class="text-sm italic" href="https://qnods.com/tags/misc">misc</a>
+      <a class="text-sm italic" href="https://edwardjoesoef.github.io/tags/misc">misc</a>
       
     </p>
   </div>
