--- a/journal/hello-world/index.html
+++ b/journal/hello-world/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>qnods</title>
-    <link rel="stylesheet" href="/css/output.css">
-    <script src="/js/custom.js"></script>
+    <link rel="stylesheet" href="/qnods/css/output.css">
+    <script src="/qnods/js/custom.js"></script>
 </head>
 <body>
     <div class="container mx-auto p-4">
@@ -61,7 +61,7 @@
     <p class="text-sm font-bold mt-10">Tags</p>
     <p>
       
-      <a class="text-sm italic" href="https://edwardjoesoef.github.io/tags/misc">misc</a>
+      <a class="text-sm italic" href="https://edwardjoesoef.github.io/qnods/tags/misc">misc</a>
       
     </p>
   </div>
