test menu hyperlink address

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
                 id="homeButton" 
                 class="border-2 p-2 border-black border-solid mr-2"
                 style="display: none;"
-                href="/"
+                href="/qnods"
             >home
             </a>
             <a
                 id="authorButton" 
                 class="border-2 p-2 border-black border-solid"
                 style="display: none;"
-                href="/author"
+                href="/qnods/author"
             >author
             </button>
         </div>
@@ -34,21 +34,21 @@
         <div class='container mx-auto pt-4 pl-2 hiddenSection' style="display: none;">
             <a 
                 class="border-2 p-2 border-black border-solid"
-                href="/projects"
+                href="/qnods/projects"
             >projects
             </a>
         </div>
         <div class='container mx-auto pt-5 pl-2 hiddenSection' style="display: none;">
             <a 
                 class="border-2 p-2 border-black border-solid"
-                href="/logs"
+                href="/qnods/logs"
             >logs
             </a>
         </div>
         <div class='container mx-auto pt-5 pl-2 hiddenSection' style="display: none;">
             <a 
                 class="border-2 p-2 border-black border-solid"
-                href="/journal"
+                href="/qnods/journal"
             >journal
             </a>
         </div>
