test menu hyperlink address

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <h2 class="text-3xl"><a href="https://edwardjoesoef.github.io/qnods/author/">Author</a></h2>
             <p class="text-sm">17 April 2024</p>
             <p class="text-justify">Hey there! 👋
-Welcome to our cozy little corner of the internet! I&rsquo;m Edward , the captain of this ship and the sole author behind everything you see here at qnods. Yep, it&rsquo;s just me, navigating the vast sea of ideas and stories.
+Welcome to our cozy little corner the internet! I&rsquo;m Edward , the captain of this ship and the sole author behind everything you see here at qnods. Yep, it&rsquo;s just me, navigating the vast sea of ideas and stories.
 But hey, who needs a crew when you&rsquo;ve got passion and creativity, right? While I may be flying solo, I assure you, the journey is no less exciting.</p>
         </div>
         
